// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionnaireAdminResultsBarChart /> renders correctly with other responses & empty response 1`] = `
<QuestionnaireAdminResultsBarChart__Container>
  <ResponsiveContainer
    debounce={0}
    height={300}
    width="100%"
  >
    <BarChart
      barCategoryGap="10%"
      barGap={4}
      data={
        Array [
          Object {
            "name": "C'est pas faux",
            "value": 97,
          },
          Object {
            "name": "Oui",
            "value": 7,
          },
          Object {
            "name": "Non",
            "value": 25,
          },
          Object {
            "name": "gender.other",
            "value": 6,
          },
        ]
      }
      layout="vertical"
      margin={
        Object {
          "bottom": 15,
          "left": 5,
          "right": 5,
          "top": 15,
        }
      }
      reverseStackOrder={false}
      stackOffset="none"
      syncMethod="index"
    >
      <XAxis
        allowDataOverflow={false}
        allowDecimals={false}
        allowDuplicatedCategory={true}
        domain={
          Array [
            0,
            "auto",
          ]
        }
        height={30}
        hide={false}
        mirror={false}
        orientation="bottom"
        padding={
          Object {
            "left": 0,
            "right": 0,
          }
        }
        reversed={false}
        scale="auto"
        tickCount={5}
        tickLine={false}
        type="number"
        width={0}
        xAxisId={0}
      />
      <YAxis
        allowDataOverflow={false}
        allowDecimals={true}
        allowDuplicatedCategory={true}
        dataKey="name"
        domain={
          Array [
            0,
            "auto",
          ]
        }
        height={0}
        hide={false}
        mirror={false}
        orientation="left"
        padding={
          Object {
            "bottom": 0,
            "top": 0,
          }
        }
        reversed={false}
        scale="auto"
        tickCount={5}
        tickLine={false}
        type="category"
        width={120}
        yAxisId={0}
      />
       
      <Bar
        animationBegin={0}
        animationDuration={400}
        animationEasing="ease"
        data={Array []}
        dataKey="value"
        fill="#128085"
        hide={false}
        isAnimationActive={true}
        layout="vertical"
        legendType="rect"
        maxBarSize={30}
        minPointSize={0}
        xAxisId={0}
        yAxisId={0}
      >
        <Cell
          fill="#8440bf"
          key="0"
        />
        <Cell
          fill="#8e40bf"
          key="1"
        />
        <Cell
          fill="#392d86"
          key="2"
        />
        <Cell
          fill="#79ced2"
          key="3"
        />
        <LabelList
          dataKey="value"
          position="right"
          valueAccessor={[Function]}
        />
      </Bar>
    </BarChart>
  </ResponsiveContainer>
</QuestionnaireAdminResultsBarChart__Container>
`;

exports[`<QuestionnaireAdminResultsBarChart /> renders correctly without other responses & on mobile 1`] = `
<QuestionnaireAdminResultsBarChart__Container>
  <ResponsiveContainer
    debounce={0}
    height={225}
    width="100%"
  >
    <BarChart
      barCategoryGap="10%"
      barGap={4}
      data={
        Array [
          Object {
            "name": "C'est pas faux",
            "value": 76,
          },
          Object {
            "name": "Oui",
            "value": 3,
          },
          Object {
            "name": "Non",
            "value": 1,
          },
        ]
      }
      layout="vertical"
      margin={
        Object {
          "bottom": 15,
          "left": 5,
          "right": 5,
          "top": 15,
        }
      }
      reverseStackOrder={false}
      stackOffset="none"
      syncMethod="index"
    >
      <XAxis
        allowDataOverflow={false}
        allowDecimals={false}
        allowDuplicatedCategory={true}
        domain={
          Array [
            0,
            "auto",
          ]
        }
        height={30}
        hide={false}
        mirror={false}
        orientation="bottom"
        padding={
          Object {
            "left": 0,
            "right": 0,
          }
        }
        reversed={false}
        scale="auto"
        tickCount={5}
        tickLine={false}
        type="number"
        width={0}
        xAxisId={0}
      />
      <YAxis
        allowDataOverflow={false}
        allowDecimals={true}
        allowDuplicatedCategory={true}
        dataKey="name"
        domain={
          Array [
            0,
            "auto",
          ]
        }
        height={0}
        hide={false}
        mirror={false}
        orientation="left"
        padding={
          Object {
            "bottom": 0,
            "top": 0,
          }
        }
        reversed={false}
        scale="auto"
        tickCount={5}
        tickLine={false}
        type="category"
        width={120}
        yAxisId={0}
      />
       
      <Bar
        animationBegin={0}
        animationDuration={400}
        animationEasing="ease"
        data={Array []}
        dataKey="value"
        fill="#128085"
        hide={false}
        isAnimationActive={true}
        layout="vertical"
        legendType="rect"
        maxBarSize={30}
        minPointSize={0}
        xAxisId={0}
        yAxisId={0}
      >
        <Cell
          fill="#8440bf"
          key="0"
        />
        <Cell
          fill="#8e40bf"
          key="1"
        />
        <Cell
          fill="#392d86"
          key="2"
        />
        <LabelList
          dataKey="value"
          position="right"
          valueAccessor={[Function]}
        />
      </Bar>
    </BarChart>
  </ResponsiveContainer>
</QuestionnaireAdminResultsBarChart__Container>
`;
